--- a/games/drifthunters.html
+++ b/games/drifthunters.html
@@ -43,6 +43,14 @@
           window.location.href = '/games';
         }
       </script>
+  <p>daithi</p>
+  <p>stay off my site</p>
+  <p>prick</p>
+  
+  
+
+
+
 
 </div>
 
