--- a/soundtag/sound.html
+++ b/soundtag/sound.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Looping Audio</title>
+    <title>Yexo Soundtag</title>
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
+            background-color: #292929;
             flex-direction: column;
         }
         button {
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <button onclick="playAudio()">Play Audio</button>
+    <button onclick="playAudio()">La passion</button>
     <audio id="audio" loop>
         <source src="audio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
