--- a/soundtag/sound.html
+++ b/soundtag/sound.html
@@ -10,12 +10,12 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #292929;
+            background-color: #1A1A1A;
             flex-direction: column;
         }
         button {
             padding: 10px 20px;
-            font-size: 18px;
+            font-size: 86px;
             cursor: pointer;
         }
     </style>
