--- a/soundtag/sound.html
+++ b/soundtag/sound.html
@@ -14,9 +14,16 @@
             flex-direction: column;
         }
         button {
-            padding: 10px 20px;
-            font-size: 86px;
+            padding: 15px 25px;
+            font-size: 90px;
             cursor: pointer;
+            background-color: #292929;
+            color: #292929;
+            border: none;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #252525;
         }
     </style>
 </head>
