--- a/soundtag/sound.html
+++ b/soundtag/sound.html
@@ -18,7 +18,7 @@
             font-size: 90px;
             cursor: pointer;
             background-color: #292929;
-            color: #292929;
+            color: white;
             border: none;
             border-radius: 5px;
         }
