--- a/soundtag/sound.html
+++ b/soundtag/sound.html
@@ -24,7 +24,7 @@
     <img id="playButton" src="image.jpg" alt="Play Button">
 
     <audio id="audio" loop>
-        <source src="your-audio-file.mp3" type="audio/mp3">
+        <source src="audio.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 
