--- a/soundtag/sound.html
+++ b/soundtag/sound.html
@@ -15,14 +15,16 @@
         }
         #playButton {
             cursor: pointer;
-            width: 500px; /* Adjust as needed */
+            width: 200px; /* Adjust as needed */
             
         }
     </style>
 </head>
 <body>
+    <!-- Play Button as an Image -->
     <img id="playButton" src="image.jpg" alt="Play Button">
 
+    <!-- Audio Element -->
     <audio id="audio" loop>
         <source src="audio.mp3" type="audio/mp3">
         Your browser does not support the audio element.
@@ -32,13 +34,19 @@
         document.getElementById("playButton").addEventListener("click", function() {
             let audio = document.getElementById("audio");
 
-            // Check if audio is already playing, if not, play it
+            // Ensure the user interaction starts playback
             if (audio.paused) {
-                audio.play().catch(error => console.log("Playback error: ", error));
+                audio.play().then(() => {
+                    console.log("Audio playing...");
+                }).catch(error => {
+                    console.error("Playback error:", error);
+                    alert("Playback error: Ensure your browser allows autoplay with user interaction.");
+                });
             } else {
                 audio.pause();
                 audio.currentTime = 0; // Reset to start
             }
         });
+    </script>
 </body>
 </html>
